@@ -1,0 +1,66 @@
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.apache.hadoop.fs;
+
+import java.io.DataInput;
+import java.io.DataOutput;
+import java.io.IOException;
+
+/** An abstract class representing file checksums for files. */
+public class LengthFileChecksum extends FileChecksum {
+  public static final String ALGORITHM_NAME = "FILE-LENGTH";
+  
+  private long value;
+
+  /** Constructor */
+  public LengthFileChecksum() {}
+
+  public LengthFileChecksum(long value) {
+    this.value = value;
+  }
+
+  /** {@inheritDoc} */ 
+  public String getAlgorithmName() {return ALGORITHM_NAME;}
+
+  /** {@inheritDoc} */ 
+  public int getLength() {return Long.SIZE/Byte.SIZE;}
+
+  /** {@inheritDoc} */ 
+  public byte[] getBytes() {
+    final byte[] b = new byte[getLength()];
+    for(int i = 0; i < b.length; i++) {
+      b[i] = (byte)(value >>> (i*Byte.SIZE));
+    }
+    return b;
+  }
+
+  /** {@inheritDoc} */ 
+  public void readFields(DataInput in) throws IOException {
+    value = in.readLong();
+  }
+
+  /** {@inheritDoc} */ 
+  public void write(DataOutput out) throws IOException {
+    out.writeLong(value);    
+  }
+
+  /** {@inheritDoc} */ 
+  public String toString() {
+    return getClass().getSimpleName() + ": " + value;
+  }
+}
